# nopal

./: .gitignore  ANALYSIS.md  CONTRIBUTING.md  README.md  ROADMAP.md  TASK_MIGRATION.md  dune  dune-project  justfile  llms.txt  nopal.opam  nopal_charts.opam  nopal_draw.opam  nopal_element.opam  nopal_examples.opam  nopal_fs_key.opam  nopal_http.opam  nopal_http_web.opam  nopal_mvu.opam  nopal_navigation.opam  nopal_platform.opam  nopal_router.opam  nopal_runtime.opam  nopal_scene.opam  nopal_storage.opam  nopal_storage_tauri.opam  nopal_storage_web.opam  nopal_style.opam  nopal_svg.opam  nopal_tauri.opam  nopal_telemetry_wire.opam  nopal_test.opam  nopal_ui.opam  nopal_web.opam
.github/workflows/: bench.yaml  commitizen.yaml  ios.yml  lint.yaml  main.yaml  pages.yaml  pr.yaml
backends/nopal_http_web/: dune  nopal_http_web.ml  nopal_http_web.mli
backends/nopal_storage_tauri/: dune  fs_store.ml  fs_store.mli  nopal_storage_tauri.ml  nopal_storage_tauri.mli
backends/nopal_storage_web/: dune  indexeddb.ml  indexeddb.mli  nopal_storage_web.ml  nopal_storage_web.mli
backends/nopal_tauri/: app.ml  app.mli  dune  event.ml  event.mli  ipc.ml  ipc.mli  nopal_tauri.ml  nopal_tauri.mli  os.ml  os.mli  platform_tauri.ml  platform_tauri.mli  store.ml  store.mli  tauri_subscription.ml  tauri_subscription.mli  telemetry.ml  telemetry.mli  tray.ml  tray.mli  window.ml  window.mli
backends/nopal_telemetry_wire/: dune  nopal_telemetry_wire.ml  nopal_telemetry_wire.mli
backends/nopal_web/: canvas_renderer.ml  canvas_renderer.mli  dune  nopal_web.ml  nopal_web.mli  platform_web.ml  platform_web.mli  renderer.ml  renderer.mli  storage.ml  storage.mli  style_css.ml  style_css.mli  style_sheet.ml  style_sheet.mli  telemetry_bridge.ml
bench/: README.md  baseline.json
bench/charts/: charts_bench.ml  charts_bench.mli  dune  index.html  main.ml
bench/jsfb/: dune  index.html  jsfb.ml  jsfb.mli  main.ml
bench/runner/: bundle-size.ts  charts.spec.ts  collect.ts  compare.ts  custom.spec.ts  jsfb.spec.ts  package-lock.json  package.json  playwright.config.ts  utils.ts  virtual_list.spec.ts
bench/virtual_list/: dune  index.html  main.ml  virtual_list_bench.ml  virtual_list_bench.mli
examples/: index.html
examples/counter/: README.md  counter.ml  counter.mli  dune  index.html  main.ml
examples/dashboard/: dashboard_app.ml  dune  index.html  main.ml
examples/http_demo/: dune  http_demo.ml  index.html  main.ml
examples/kitchen_sink/: dune  focus_keyboard.ml  focus_keyboard.mli  index.html  kitchen_sink_app.ml  kitchen_sink_form.ml  kitchen_sink_form_controls.ml  kitchen_sink_text_input.ml  kitchen_sink_ui.ml  main.ml  sub_bottom_tabs.ml  sub_bottom_tabs.mli  sub_counter.ml  sub_data_table.ml  sub_data_table.mli  sub_modal.ml  sub_modal.mli  sub_navigation_bar.ml  sub_navigation_bar.mli  sub_subscriptions.ml  sub_subscriptions.mli  sub_toast.ml  sub_toast.mli  sub_virtual_list.ml  sub_virtual_list.mli  sub_wizard.ml  tauri_op.ml  tauri_op.mli
examples/router_demo/: dune  index.html  main.ml  router_demo_app.ml  router_demo_app.mli
examples/todomvc/: README.md  dune  index.html  main.ml  todomvc.ml  todomvc.mli
guides/: tauri-v2-linux-tray-ksni.md
lib/: dune
planning/: 00_project_overview.md  01_phase1_planning.md
scripts/: android-require-bridge  android-require-home  android-run  check-e2e-wired  lint-classes  worktree-new
tauri/: package-lock.json  package.json
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/src/: lib.rs  main.rs
test/: dune
test/unit/kitchen_sink/: dune  test_bottom_tabs_section.ml  test_data_table_section.ml  test_http_section.ml  test_keyed_section.ml  test_mobile_section.ml  test_storage_section.ml  test_style_removal_section.ml  test_subscriptions_section.ml  test_tauri_op.ml  test_toast_section.ml  test_tray_section.ml  test_wizard_section.ml
test/unit/nopal_charts/: dune  test_area.ml  test_area_scene.ml  test_axis.ml  test_bar.ml  test_bar_scene.ml  test_chart_compose.ml  test_chart_pane.ml  test_charts_extensions_structural.ml  test_charts_structural.ml  test_color_scale.ml  test_domain_window.ml  test_domain_window_integration.ml  test_downsample.ml  test_heat_map.ml  test_heat_map_scene.ml  test_hit_map.ml  test_hover.ml  test_legend.ml  test_line.ml  test_line_scene.ml  test_padding.ml  test_pie.ml  test_pie_scene.ml  test_scatter.ml  test_scatter_scene.ml  test_snap.ml  test_sparkline.ml  test_sparkline_scene.ml  test_tooltip.ml  test_trading_candlestick.ml  test_trading_candlestick_scene.ml  test_trading_drawdown.ml  test_trading_drawdown_scene.ml  test_viewport.ml
test/unit/nopal_charts/helpers/: chart_test_helpers.ml  chart_test_helpers.mli  dune
test/unit/nopal_element/: dune  test_draw_element.ml  test_element.ml  test_element_events.ml  test_element_form.ml  test_responsive_combinators.ml  test_responsive_structural.ml  test_size_class.ml  test_viewport.ml  test_virtual_list.ml  test_virtual_list_structural.ml
test/unit/nopal_tauri/: dune  tauri_shim.js  test_decoder_roundtrip.ml  test_negative_path.ml  test_nopal_tauri_os.ml  test_nopal_tauri_platform.ml  test_nopal_tauri_signals.ml  test_nopal_tauri_store.ml  test_results.ml  test_tauri_subscription.ml  test_telemetry.ml
test/unit/nopal_test/: dune  test_draw_renderer.ml  test_event_simulation.ml  test_telemetry_harness.ml  test_test_renderer.ml
test/unit/nopal_ui/: dune  test_anchors.ml  test_bottom_tabs.ml  test_button.ml  test_checkbox.ml  test_data_table.ml  test_modal.ml  test_navigation_bar.ml  test_radio_group.ml  test_select_input.ml  test_slug.ml  test_text_input.ml  test_toast.ml
test/unit/nopal_web/: browser_shim.js  canvas_shim.js  dom_shim.js  dune  mount_shim.js  stylesheet_shim.js  subs_shim.js  test_canvas_renderer.ml  test_mount_safe_area.ml  test_mount_telemetry.ml  test_nopal_web.ml  test_platform_web.ml  test_structural.ml  test_style_css.ml  test_style_sheet.ml  test_subscriptions.ml
test/unit/todomvc/: dune  test_helpers.ml  test_helpers.mli  test_todomvc.ml  test_todomvc_view.ml
(+324 files in other folders)
