(library
 (name focus_keyboard)
 (modules focus_keyboard)
 (libraries nopal_element nopal_mvu))

(library
 (name kitchen_sink_app)
 (modules
  kitchen_sink_app
  sub_counter
  kitchen_sink_ui
  kitchen_sink_form
  kitchen_sink_form_controls
  kitchen_sink_text_input
  sub_toast
  sub_data_table)
 (libraries
  nopal_element
  nopal_mvu
  nopal_style
  nopal_draw
  nopal_charts
  nopal_svg
  nopal_http
  nopal_ui
  focus_keyboard))

(executable
 (name main)
 (modules main)
 (libraries
  kitchen_sink_app
  nopal_runtime
  nopal_web
  nopal_http_web
  nopal_tauri
  brr)
 (modes js)
 (js_of_ocaml))
