(library
 (name focus_keyboard)
 (modules focus_keyboard)
 (libraries nopal_element nopal_mvu))

(library
 (name kitchen_sink_app)
 (modules
  kitchen_sink_app
  sub_counter
  sub_wizard
  kitchen_sink_ui
  kitchen_sink_form
  kitchen_sink_form_controls
  kitchen_sink_text_input
  sub_toast
  sub_data_table
  sub_virtual_list
  sub_navigation_bar
  sub_bottom_tabs
  sub_modal
  sub_subscriptions
  tauri_op)
 (libraries
  nopal_element
  nopal_mvu
  nopal_style
  nopal_draw
  nopal_charts
  nopal_svg
  nopal_http
  nopal_ui
  nopal_navigation
  nopal_platform
  nopal_storage
  focus_keyboard))

(executable
 (name main)
 (modules main)
 (libraries
  kitchen_sink_app
  nopal_runtime
  nopal_web
  nopal_http_web
  nopal_tauri
  brr)
 (modes js)
 (js_of_ocaml))
