[package]
name = "nopal-kitchen-sink"
version = "0.0.0"
edition = "2021"

[lib]
name = "nopal_kitchen_sink_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-os = "2"
tauri-plugin-store = "2"

[target.'cfg(target_os = "linux")'.dependencies]
ksni = { version = "0.3", features = ["blocking"] }
image = { version = "0.25", default-features = false, features = ["png"] }
