(test
 (name test_http_section)
 (libraries
  kitchen_sink_app
  nopal_test
  nopal_http
  nopal_platform
  nopal_storage
  test_util
  alcotest))

(test
 (name test_toast_section)
 (libraries kitchen_sink_app nopal_test nopal_element test_util alcotest))

(test
 (name test_wizard_section)
 (libraries kitchen_sink_app nopal_test nopal_element alcotest))

(test
 (name test_bottom_tabs_section)
 (libraries kitchen_sink_app nopal_test nopal_mvu test_util alcotest))

(test
 (name test_data_table_section)
 (libraries kitchen_sink_app nopal_ui alcotest))

(test
 (name test_storage_section)
 (libraries
  kitchen_sink_app
  nopal_test
  nopal_element
  nopal_platform
  nopal_storage
  test_util
  alcotest))

(test
 (name test_mobile_section)
 (libraries
  kitchen_sink_app
  nopal_test
  nopal_element
  nopal_style
  nopal_platform
  nopal_storage
  test_util
  alcotest))
