(tests
 (names
  test_padding
  test_hit_map
  test_axis
  test_tooltip
  test_legend
  test_sparkline
  test_bar
  test_line
  test_area
  test_pie
  test_scatter
  test_chart_compose
  test_color_scale
  test_domain_window
  test_viewport
  test_snap
  test_downsample
  test_heat_map
  test_trading_drawdown
  test_trading_candlestick
  test_chart_pane
  test_domain_window_integration)
 (libraries
  chart_test_helpers
  nopal_charts
  nopal_draw
  nopal_element
  nopal_style
  nopal_test
  alcotest))
