(test
 (name test_element)
 (libraries nopal_element nopal_style alcotest))

(test
 (name test_element_events)
 (libraries nopal_element nopal_style alcotest))

(test
 (name test_draw_element)
 (libraries nopal_element nopal_style nopal_scene alcotest))

(test
 (name test_size_class)
 (libraries nopal_element alcotest))

(test
 (name test_viewport)
 (libraries nopal_element alcotest))

(test
 (name test_responsive_combinators)
 (libraries nopal_element nopal_style alcotest))

(test
 (name test_element_form)
 (libraries nopal_element nopal_style nopal_test test_util alcotest))
