(test
 (name test_test_renderer)
 (libraries nopal_test nopal_element nopal_style nopal_mvu alcotest))

(test
 (name test_event_simulation)
 (libraries nopal_test nopal_element nopal_style alcotest))

(test
 (name test_draw_renderer)
 (libraries nopal_test nopal_element nopal_draw nopal_style alcotest))
