(test
 (name test_test_renderer)
 (libraries
  nopal_test
  nopal_element
  nopal_style
  nopal_mvu
  test_util
  alcotest))

(test
 (name test_event_simulation)
 (libraries nopal_test nopal_element nopal_style test_util alcotest))

(test
 (name test_draw_renderer)
 (libraries nopal_test nopal_element nopal_draw nopal_style test_util alcotest))
