(test
 (name test_button)
 (libraries nopal_ui nopal_test nopal_element nopal_style alcotest test_util))

(test
 (name test_checkbox)
 (libraries nopal_ui nopal_test nopal_element nopal_style alcotest test_util))

(test
 (name test_text_input)
 (libraries nopal_ui nopal_test nopal_element nopal_style alcotest test_util))

(test
 (name test_slug)
 (libraries nopal_ui alcotest))

(test
 (name test_radio_group)
 (libraries nopal_ui nopal_test nopal_element nopal_style alcotest test_util))

(test
 (name test_select_input)
 (libraries nopal_ui nopal_test nopal_element nopal_style alcotest test_util))
