(test
 (name test_button)
 (libraries nopal_ui nopal_test nopal_element nopal_style alcotest test_util))

(test
 (name test_checkbox)
 (libraries nopal_ui nopal_test nopal_element nopal_style alcotest test_util))

(test
 (name test_text_input)
 (libraries nopal_ui nopal_test nopal_element nopal_style alcotest test_util))

(test
 (name test_slug)
 (libraries nopal_ui alcotest))

(test
 (name test_radio_group)
 (libraries nopal_ui nopal_test nopal_element nopal_style alcotest test_util))

(test
 (name test_select_input)
 (libraries nopal_ui nopal_test nopal_element nopal_style alcotest test_util))

(test
 (name test_toast)
 (libraries
  nopal_ui
  nopal_test
  nopal_element
  nopal_style
  nopal_mvu
  alcotest
  test_util))

(test
 (name test_data_table)
 (libraries nopal_ui nopal_test nopal_element nopal_style alcotest test_util))

(test
 (name test_navigation_bar)
 (libraries nopal_ui nopal_test nopal_element nopal_style alcotest test_util))

(test
 (name test_modal)
 (libraries
  nopal_ui
  nopal_test
  nopal_element
  nopal_style
  nopal_mvu
  alcotest
  test_util))
