(test
 (name test_style_css)
 (package nopal_web)
 (libraries nopal_web nopal_style alcotest)
 (modes js)
 (js_of_ocaml))

; dom_shim.js provides a minimal fake DOM (document, window, Event, etc.)
; so that Brr-based renderer tests can run under Node.js via js_of_ocaml
; without a headless browser. It covers element creation, child manipulation,
; event dispatch, and style proxying — not layout or rendering.

(test
 (name test_nopal_web)
 (package nopal_web)
 (libraries
  nopal_web
  nopal_element
  nopal_style
  nopal_runtime
  nopal_mvu
  alcotest
  brr
  js_of_ocaml)
 (modes js)
 (js_of_ocaml
  (javascript_files dom_shim.js stylesheet_shim.js)))

(test
 (name test_style_sheet)
 (package nopal_web)
 (libraries nopal_web nopal_style alcotest brr)
 (modes js)
 (js_of_ocaml
  (javascript_files dom_shim.js stylesheet_shim.js)))

(test
 (name test_platform_web)
 (package nopal_web)
 (libraries nopal_web alcotest)
 (modes js)
 (js_of_ocaml
  (javascript_files browser_shim.js)))

; mount_shim.js adds a ResizeObserver stub and a no-op requestAnimationFrame on
; top of dom_shim.js, so the mount/drive path can be exercised synchronously
; without an infinite rAF loop. See mount_shim.js for the rationale.

(test
 (name test_mount_telemetry)
 (package nopal_web)
 (libraries
  nopal_web
  nopal_element
  nopal_style
  nopal_runtime
  nopal_mvu
  alcotest
  brr
  js_of_ocaml)
 (modes js)
 (js_of_ocaml
  (javascript_files dom_shim.js mount_shim.js)))
